Started working on BackupManager, added some more output parsing.

--- a/MCBE-ServerWrapper/MCBE-ServerWrapper.csproj
+++ b/MCBE-ServerWrapper/MCBE-ServerWrapper.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackupManager.cs" />
     <Compile Include="ExitCodes.cs" />
     <Compile Include="InputOutputManager.cs" />
     <Compile Include="Program.cs" />
