--- a/MCBE-ServerWrapper/MCBE-ServerWrapper.csproj
+++ b/MCBE-ServerWrapper/MCBE-ServerWrapper.csproj
@@ -48,6 +48,8 @@
     <Compile Include="BackupManager.cs" />
     <Compile Include="ExitCodes.cs" />
     <Compile Include="InputOutputManager.cs" />
+    <Compile Include="PlayerManagement\Player.cs" />
+    <Compile Include="PlayerManagement\PlayerManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerProcess.cs" />
