--- a/MCBE-ServerWrapper/MCBE-ServerWrapper.csproj
+++ b/MCBE-ServerWrapper/MCBE-ServerWrapper.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A03B0023-D14F-454B-BBD9-E8CECB76A769}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MCBE_ServerWrapper</RootNamespace>
-    <AssemblyName>MCBE-ServerWrapper</AssemblyName>
+    <RootNamespace>BedrockServerWrapper</RootNamespace>
+    <AssemblyName>MCBSW</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -39,6 +39,9 @@
     <RunCodeAnalysis>true</RunCodeAnalysis>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>logo.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -67,6 +70,9 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="logo.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -75,6 +81,6 @@
     <Error Condition="!Exists('..\packages\ILMerge.3.0.21\build\ILMerge.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ILMerge.3.0.21\build\ILMerge.props'))" />
   </Target>
   <PropertyGroup>
-    <PostBuildEvent>$(ILMergeConsolePath) /wildcards /ndebug /out:MCBSW.exe MCBE-ServerWrapper.exe *.dll</PostBuildEvent>
+    <PostBuildEvent>$(ILMergeConsolePath) /wildcards /ndebug /out:MCBSW.exe MCBSW.exe *.dll</PostBuildEvent>
   </PropertyGroup>
 </Project>
