--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
 variables:
   EXE_RELEASE_FOLDER: 'Stage\Release'
   DEPLOY_FOLDER: 'Stage\Deploy'
-  NUGET_PATH: 'C:\Program Files (x86)\NuGet\nuget.exe'
   MSBUILD_PATH: 'C:\Program Files (x86)\Microsoft Visual Studio\2019\BuildTools\MSBuild\Current\Bin\msbuild.exe'
 
 stages:
@@ -11,8 +10,7 @@ stages:
 build_job:
   stage: build
   script:
-    - '& "$env:NUGET_PATH" restore'  # restore Nuget dependencies
-    - '& "$env:MSBUILD_PATH" /p:Configuration=Release'  # build the project
+    - '& "$env:MSBUILD_PATH" /p:Configuration=Release /p:Platform="Any CPU" /restore'
   artifacts:
     expire_in: 1 week  # save gitlab server space, we copy the files we need to deploy folder later on
     paths:
