--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
   <PropertyGroup>
-    <TargetFramework>net48</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <RunAnalyzersDuringBuild>true</RunAnalyzersDuringBuild>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <RootDir>$(SolutionDir)</RootDir>
-    <Stage>$(RootDir)\Stage</Stage>
+    <Stage>$(SolutionDir)\Stage</Stage>
     <OutputPath>$(Stage)\$(Configuration)\</OutputPath>
     <BaseIntermediateOutputPath>$(Stage)\obj</BaseIntermediateOutputPath>
     <IntermediateOutputPath>$(BaseIntermediateOutputPath)\$(Configuration)\$(Platform)\$(MSBuildProjectFile)</IntermediateOutputPath>
-    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <Copyright>Copyright © AhlSoft 2021</Copyright>
   </PropertyGroup>
 </Project>
