Added AutoFac and rewrote a whole bunch of things, enabled changing autobackup settings during runtime.

--- a/MCBE-ServerWrapper/MCBE-ServerWrapper.csproj
+++ b/MCBE-ServerWrapper/MCBE-ServerWrapper.csproj
@@ -20,9 +20,8 @@
     <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
-  <ItemGroup>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
