--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 variables:
   VER_PREFIX: '1.1.0'
   EXE_RELEASE_FOLDER: 'Stage/Release'
+  JFROG_CLI_BUILD_NUMBER: '${VER_PREFIX}.${CI_PIPELINE_IID}'
 
 stages:
   - build
@@ -8,23 +9,12 @@ stages:
 windows:
   stage: 'build'
   dependencies: []
+  tags:
+  - windows
   script:
-    - dotnet publish --configuration Release --nologo -p:PublishReadyToRun=true  -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true -p:Version=$VER_PREFIX.$CI_PIPELINE_IID --runtime win-x64
-    - cp "$EXE_RELEASE_FOLDER/win-x64/publish/MCBSW.exe" MCBSW.exe
-  artifacts:
-    name: 'mcbsw-win64_$VER_PREFIX.$CI_PIPELINE_IID'
-    when: on_success
-    paths:
-      - 'MCBSW.exe'
-
-linux:
-  stage: 'build'
-  dependencies: []
-  script:
-    - dotnet publish --configuration Release --nologo -p:PublishReadyToRun=false -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true -p:Version=$VER_PREFIX.$CI_PIPELINE_IID --runtime linux-x64
-    - cp "$EXE_RELEASE_FOLDER/linux-x64/publish/MCBSW" mcbsw
-  artifacts:
-    name: 'mcbsw-linux64_$VER_PREFIX.$CI_PIPELINE_IID'
-    when: on_success
-    paths:
-      - 'mcbsw'
+    - dotnet publish --configuration Release --nologo -p:PublishReadyToRun=true  -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true -p:Version=$JFROG_CLI_BUILD_NUMBER --runtime win-x64
+    - dotnet publish --configuration Release --nologo -p:PublishReadyToRun=false -p:PublishSingleFile=true -p:PublishTrimmed=true --self-contained true -p:Version=$JFROG_CLI_BUILD_NUMBER --runtime linux-x64
+    - jfrog rt u "$EXE_RELEASE_FOLDER/**/publish/*" mcbesw/${CI_COMMIT_BRANCH}/${JFROG_CLI_BUILD_NUMBER}/ --build-name mcbesw --build-number $JFROG_CLI_BUILD_NUMBER 
+    - jfrog rt bag mcbesw $JFROG_CLI_BUILD_NUMBER
+    - jfrog rt bp mcbesw $JFROG_CLI_BUILD_NUMBER
+    - jfrog rt bce mcbesw $JFROG_CLI_BUILD_NUMBER
