--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build Minecraft Bedrock Server Wrapper
 on:
   push:
     branches:
-      - master
+      - main
 
 env:
   FULL_VERSION: 1.3.1.${{github.run_number}}
